--- a/css/main.scss
+++ b/css/main.scss
@@ -9,11 +9,12 @@ body {
   padding: 5px;
   .main-content {
     text-align: center;
-
-    .loading {
-      font-size: 50px;
-    }
   }
+}
+
+.loading {
+  font-size: 50px;
+  text-align: center;
 }
 
 .container {
