--- a/templates/all-pages.html
+++ b/templates/all-pages.html
@@ -1,4 +1,4 @@
-<div class="all-pages">
+<div class="all-pages hidden">
   <div class="products">
     <div class="product__item">
       <label class="product__item__content">
