--- a/templates/popup.html
+++ b/templates/popup.html
@@ -22,7 +22,9 @@
     </div>
     <div class="popup__content">
       <div id="popup-main" class="popup__main">
-
+        <div class="loading">
+          <i class="fa fa-spinner fa-pulse"></i>
+        </div>
       </div>
     </div>
     <div class="popup__footer">
