--- a/templates/popup.html
+++ b/templates/popup.html
@@ -18,7 +18,7 @@
     </div>
     <div class="popup__search">
       <span class="icon"><i class="fa fa-search"></i></span>
-      <input id="search-bar" class="popup__search__bar" type="search" name="search" placeholder="Narrow by typing...">
+      <input id="popup-search-bar" class="popup__search__bar" type="search" name="search" placeholder="Narrow by typing...">
     </div>
     <div class="popup__content">
       <div id="popup-main" class="popup__main">
