--- a/css/popup/components/_popup-search.scss
+++ b/css/popup/components/_popup-search.scss
@@ -14,16 +14,17 @@
 
   .icon {
     color: #4f5b66;
+    font-size: 1.2em;
+    left: 15px;
     margin-left: 17px;
     margin-top: 17px;
     position: absolute;
-    left: 15px;
-    top: 9px;
+    top: 6px;
     z-index: 1;
   }
 }
 
-.search--focused {
+.popup__search__bar--focused {
   .icon {
     color: blue;
   }
