--- a/templates/popup.html
+++ b/templates/popup.html
@@ -1,8 +1,8 @@
 <div class="popup__button">
   <button id="button-popup-open" type="button" name="popup-open-button" class="button button--state--success">Select pages</button>
 </div>
-<div id="popup-window" class="popup__window hidden">
-  <div class="popup">
+<div id="popup" class="popup hidden">
+  <div class="popup__window">
     <div class="popup__header">
       <h2>Select pages</h2>
       <ul class="menu">
