Some styles were broken, now they are fixed

--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ ul {
 
 .selected-products .selected-product__content {
   border-bottom: 1px solid gray;
-  padding: 3px 10px; }
+  padding: 3px 10px 3px 5px; }
   .selected-products .selected-product__content:hover {
     background: rgba(224, 224, 224, 0.7); }
   .selected-products .selected-product__content:first-of-type {
@@ -130,7 +130,7 @@ ul {
       color: gray; }
 
 .popup__content {
-  padding: 5px 0 0 20px; }
+  padding: 5px 20px 0 20px; }
   .popup__content .popup__main {
     margin-top: 35px;
     min-height: 300px;
