--- a/css/popup/components/_popup-selected-products.scss
+++ b/css/popup/components/_popup-selected-products.scss
@@ -1,47 +1,40 @@
 .selected-products {
   .selected-product__content {
     border-bottom: 1px solid gray;
-    padding: 3px 10px;
-
+    padding: 3px 10px 3px 5px;
+    
     &:hover {
       background: $product-item-content-color-hovered;
     }
-
     &:first-of-type {
       border-top: 1px solid gray;
     }
-
     .fa {
       display: inline-block;
       float: left;
       position: relative;
       top: 5px;
     }
-
     .selected-product__text {
       display: inline-block;
       margin: 0;
       padding-left: 10px;
       width: 80%;
-
       .selected-product__title {
         display: block;
         float: left;
         width: 100%;
         word-wrap: break-word;
       }
-
       .selected-product__description {
         color: gray;
         display: block;
       }
     }
-
     .button__popup--remove--content {
       float: right;
       position: relative;
       top: 12.5px;
-
       &:hover {
         color: gray;
       }
