--- a/css/popup/_popup.scss
+++ b/css/popup/_popup.scss
@@ -11,6 +11,7 @@
   position: absolute;;
   right: 0;
   top: 0;
+  z-index: 100;
 }
 
 .popup__window {
@@ -18,4 +19,5 @@
   margin: 70px auto;
   position: relative;
   width: 50%;
+  z-index: 200;
 }
