Added Ids to all of the template htmls.

--- a/templates/all-pages.html
+++ b/templates/all-pages.html
@@ -1,5 +1,5 @@
 <div class="all-pages">
-  <div class="products">
+  <div id="products" class="products">
     <div class="product__item">
       <label class="product__item__content">
           <input type="checkbox" name="checkbox" class="popup__checkbox">
