--- a/templates/selected-pages.html
+++ b/templates/selected-pages.html
@@ -1,4 +1,4 @@
-<div class="selected-pages hidden">
+<div id="selected-pages" class="selected-pages hidden">
   <div class="selected-products">
     <div class="selected-product__content">
       <i class="fa fa-times button__popup--remove--content"></i>
