--- a/css/popup/popup-components/_popup-products.scss
+++ b/css/popup/popup-components/_popup-products.scss
@@ -1,5 +1,3 @@
-@import 'popup-products-border';
-
 .products {
   .product__item__content {
     display: block;
@@ -18,12 +16,24 @@
   }
 
   .product__item {
+    border-bottom: 1px solid gray;
+
+    &:first-of-type {
+      border-top: 1px solid gray;
+    }
+
+    &::last-of-type {
+      border-bottom: 1px solid gray;
+    }
     .product__text {
       padding-left: 20px;
     }
   }
 
   .product__item--editable {
+    &:last-of-type {
+      border-bottom: 0;
+    }
     .product__text {
       padding-left: 0;
     }
