--- a/css/components/_media-queries.scss
+++ b/css/components/_media-queries.scss
@@ -9,7 +9,7 @@
 @media (min-width: 480px) and (max-width: 799px) {
   .container {
     .popup__window {
-      font-size: 0.9em;
+      font-size: .9em;
       width: 70%;
     }
   }
@@ -17,8 +17,9 @@
 @media (min-width: 320px) and (max-width: 479px) {
   .container {
     .popup__window {
-      font-size: 0.9em;
+      font-size: .9em;
       width: 90%;
+
       .selected-products {
         .selected-product__content {
           .selected-product__text {
