Fixed the bug when 500% zoomed everything went nuts.

--- a/css/components/_media-queries.scss
+++ b/css/components/_media-queries.scss
@@ -30,3 +30,20 @@
     }
   }
 }
+
+@media (max-width: 319px) {
+  .container {
+    .popup__window {
+      font-size: .8em;
+      width: 90%;
+
+      .selected-products {
+        .selected-product__content {
+          .selected-product__text {
+            padding-left: 1px;
+          }
+        }
+      }
+    }
+  }
+}
