Added more tests, especially for popup window events. Made the popup header not to move up and down when changing tabs. Moved the X button in the header a little bit to the top.

--- a/css/components/_variables.scss
+++ b/css/components/_variables.scss
@@ -9,3 +9,5 @@ $button-success-color-hoverd: rgb(53, 127, 74);
 $button-default-color: none;
 $button-default-color-hoverd: rgb(190, 190, 190);
 $circle-green-color: rgb(56, 171, 99);
+$search-bar-icon-and-text-color: rgb(210, 200, 200);
+$search-bar-icon-focused-color: rgb(29, 49, 229);
