--- a/css/popup/popup-components/_popup-button.scss
+++ b/css/popup/popup-components/_popup-button.scss
@@ -7,9 +7,9 @@
   font-size: 1.1em;
   font-weight: bold;
   position: absolute;
-  right: 30px;
+  right: 15px;
   text-decoration: none;
-  top: 30px;
+  top: 15px;
 
   &:hover {
     color: gray;
@@ -18,7 +18,7 @@
 }
 
 .button__popup--clear {
-  color: #4f5b66;
+  color: gray;
   font-size: 1.2em;
   margin-left: 0;
   margin-top: 17px;
