--- a/css/popup/popup-components/_popup-header.scss
+++ b/css/popup/popup-components/_popup-header.scss
@@ -6,7 +6,6 @@
     color: gray;
     font-weight: normal;
   }
-
   .menu {
     .menu__item {
       color: blue;
@@ -15,20 +14,24 @@
       padding-bottom: 5px;
 
       .menu__item__text {
+        display: inline-block;
+        height: 22px;
+
         &:hover {
           color: black;
           cursor: pointer;
         }
       }
-      
+
       .menu__item__badge {
         display: inline-block;
+
         &:hover {
           cursor: pointer;
         }
       }
     }
-
+    
     .menu__item--active {
       border-bottom: 2px solid gray;
       color: black;
